# password_tools

./: Makefile.am  README.md  configure.ac
generate_password/: Makefile.am  configure.ac
management_password/: Makefile.am  configure.ac  management_password.cpp
resource/: gen_dict.sh
